workload/postgresql-ha/manifests/postgresql-ha-additional.yaml
#@ load("@ytt:data", "data")

#@ def labels():
app.kubernetes.io/name: postgresql-ha
app.kubernetes.io/instance: postgresql-ha
app.kubernetes.io/managed-by: kapp-controller
app.kubernetes.io/component: pgpool
#@ end

---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.postgres.namespace
  annotations:
    iam.amazonaws.com/permitted: ".*"
