workload/postgresql-ha/manifests/postgresql.yaml
#! DO NOT MODIFY THIS FILE DIRECTLY IT IS GENERATED FROM ./postgresql-ha/helm/generate-manifests.sh
---
# Source: postgresql-ha/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: "networking.k8s.io/v1"
metadata:
  name: postgresql-ha
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
spec:
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/instance: postgresql-ha
      app.kubernetes.io/component: postgresql
  ingress:
    # Allow inbound connections
    - ports:
        - port: 5432
      from:
        - podSelector:
            matchLabels:
              postgresql-ha-client: "true"
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql-ha
              app.kubernetes.io/instance: postgresql-ha
    # Allow prometheus scrapes
    - ports:
        - port: 9187
---
# Source: postgresql-ha/templates/pgpool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ha-pgpool
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
  annotations:
    {}

spec:
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/component: pgpool
---
# Source: postgresql-ha/templates/postgresql/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ha-postgresql-metrics
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postgresql
  annotations:
    prometheus.io/port: "9187"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 9187
      targetPort: metrics
  selector:
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/component: postgresql
---
# Source: postgresql-ha/templates/postgresql/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ha-postgresql-headless
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/component: postgresql
---
# Source: postgresql-ha/templates/postgresql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql-ha-postgresql
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postgresql
spec:
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      targetPort: postgresql
      protocol: TCP
  selector:
    app.kubernetes.io/name: postgresql-ha
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/component: postgresql
---
# Source: postgresql-ha/templates/pgpool/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-ha-pgpool
  labels: 
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: pgpool
spec:
  replicas: 2
  selector:
    matchLabels: 
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/instance: postgresql-ha
      app.kubernetes.io/component: pgpool
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: postgresql-ha
        helm.sh/chart: postgresql-ha-6.1.0
        app.kubernetes.io/instance: postgresql-ha
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: pgpool
    spec:
      
      securityContext:
        fsGroup: 1001
      containers:
        - name: pgpool
          image: myRegistryName/bitnami/pgpool:4.1.4-debian-10-r48
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /opt/bitnami/scripts/pgpool/healthcheck.sh
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - PGPASSWORD=${PGPOOL_POSTGRES_PASSWORD} psql -U "postgres" -d "postgres" -h /opt/bitnami/pgpool/tmp -tA -c "SELECT 1" >/dev/null
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
      volumes:
---
# Source: postgresql-ha/templates/postgresql/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql-ha-postgresql
  labels:
    app.kubernetes.io/name: postgresql-ha
    helm.sh/chart: postgresql-ha-6.1.0
    app.kubernetes.io/instance: postgresql-ha
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postgresql
spec:
  serviceName: postgresql-ha-postgresql-headless
  replicas: 2
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql-ha
      app.kubernetes.io/instance: postgresql-ha
      app.kubernetes.io/component: postgresql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgresql-ha
        helm.sh/chart: postgresql-ha-6.1.0
        app.kubernetes.io/instance: postgresql-ha
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: postgresql
      annotations:
        prometheus.io/port: "9187"
        prometheus.io/scrape: "true"
    spec:
      
      securityContext:
        fsGroup: 1001
      containers:
        - name: postgresql
          lifecycle:
            preStop:
              exec:
                command:
                  - /pre-stop.sh
          image: myRegistryName/bitnami/postgresql-repmgr:11.9.0-debian-10-r82
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          # Auxiliar vars to populate environment variables
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U "postgres" -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U "postgres" -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/postgresql
            - name: hooks-scripts
              mountPath: /pre-stop.sh
              subPath: pre-stop.sh
        - name: metrics
          image: myRegistryName/bitnami/postgres-exporter:0.8.0-debian-10-r269
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: metrics
              containerPort: 9187
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: metrics
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
      volumes:
        - name: hooks-scripts
          configMap:
            name: postgresql-ha-postgresql-hooks-scripts
            defaultMode: 0755
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        storageClassName: generic
